<resources>
    <string name="action_settings">Settings</string>
    <string name="status_go">"Go for Launch"</string>
    <string name="status_nogo">"Launch Date Unconfirmed"</string>
    <string name="status_success">"Successful Launch"</string>
    <string name="status_failure">"Launch Failure Occurred"</string>
    <string name="spacex_summary">SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets.</string>
    <string name="usaf_summary">The United States Air Force is the aerial warfare service branch of the United States Armed Forces and one of the seven American uniformed services.</string>
    <string name="casc_summary">The China Aerospace Science and Technology Corporation(CASC) is the main contractor for the Chinese space program. It is state-owned and has a number of subordinate entities which design, develop and manufacture a range of spacecraft, Launch vehicles, strategic and tactical missile systems, and ground equipment.</string>
    <string name="cnsa_summary">The China National Space Administration (CNSA) is the national space agency of the People\'s Republic of China. It is responsible for the national space program and for planning and development of space activities.</string>
    <string name="isro_summary">The Indian Space Research Organisation (ISRO), is the space agency of the Indian government headquartered in the city of Bengaluru. Its vision is to \"harness space technology for national development, while pursuing space science research and planetary exploration\".</string>
    <string name="vko_summary">"The Russian Aerospace Defence Forces (VKO) was the branch of the Armed Forces of the Russian Federation responsible for air and missile defence, and the operation of Russian military satellites and the Plesetsk Cosmodrome. "</string>
    <string name="roscosmos_summary">The Roscosmos State Corporation for Space Activities, commonly known as Roscosmos, is the governmental body responsible for the Russian space science program and general aerospace research.</string>
    <string name="ula_summary"><![CDATA[United Launch Alliance (ULA) is a joint venture of Lockheed Martin Space Systems and Boeing Defense, Space & Security. ULA was formed in December 2006 by combining the teams at these companies which provide spacecraft Launch services to the government of the United States.]]></string>
    <string name="gd_summary">General Dynamics Corporation is an American aerospace and defense company formed by mergers and divestitures. It is the world\'s fifth-largest defense contractor based on 2012 revenues.</string>
    <string name="asa_summary">Arianespace SA is a French multinational company founded in 1980 as the world\'s first commercial Launch service provider.</string>
    <string name="TsSKB_summary">The Progress State Research and Production Space Centre, also known as TsSKB-Progress, is a Russian \"Federal State Unitary Enterprise\" under the jurisdiction of Roscosmos, the Russian Federal Space Agency responsible for space science and aerospace research. It is the developer of the famous Soyuz-FG rocket used for manned space flight, as well as Soyuz-U used for launching unmanned probes.</string>
    <string name="nasa_summary">The National Aeronautics and Space Administration (NASA) is the United States government agency responsible for the civilian space program as well as aeronautics and aerospace research.</string>
    <string name="general_settings">General settings for launch tracking and application behavior.</string>
    <string name="supporter_title">Become a Supporter</string>
    <string name="supporter_description">Help ensure continued support, timely bug fixes, and new features.</string>
    <string name="slide_one_title">Space Launch Now</string>
    <string name="slide_one_description">Keep up to date on all your favorite orbital launches, missions, and launch vehicles.</string>
    <string name="slide_two_title">Notification for Launches</string>
    <string name="slide_two_description">Get notifications for upcoming launches and look into the history of spaceflight</string>
    <string name="slide_three_title">Find Launch Vehicles</string>
    <string name="slide_three_description">Get to know the vehicles that have taken us to orbit.</string>
    <string name="thank_you">This application, Space Launch Now, started as a simple weekend project. In the course of a year its grown to nearly 10,000 active users. I am incredibly appreciative to everyone that has taken the time to report bugs, give feedback, participate in BETA\'s and become supporters.</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="please_rate">Hey there! You seem to like this app, would you mind visiting the Play Store and give a rating? It would help us a great deal!
    \n\nIf instead you hate this app, we would love to hear your feedback so we can improve. Thanks!</string>
    <string name="please_rate_short">Hey, you seem to like this app. You would help us a great deal with a 5-star rating! Otherwise if you have suggestions - please let us know.</string>
    <string name="button_yes">Rate!</string>
    <string name="button_no">No thanks</string>
    <string name="button_feedback">Give Feedback</string>
    <string name="button_dont_ask">Don’t ask again</string>
    <string name="swipe_to_dismiss">Swipe to Dismiss</string>
    <string name="notifications_settings">Set up launch notifications and scheduling.</string>
    <string name="appearance_settings">Customize app theme, widgets and colors.</string>
    <string name="about_settings">Application information about license, libraries, changelog, etc</string>
    <string name="support_settings">Get pro features and contribute to future development.</string>
    <string name="wear_settings">Change Android Wear watch face settings.</string>
    <string name="supporter_unlock_text">I appreciate you considering supporting Space Launch Now. \n\nEvery level of support is a one-time purchase that unlocks all pro-features forever. Pay what you want to support continued development and updates!</string>
    <string name="thank_you_support">Thanks for your continued support!</string>
    <string name="ok">OK</string>
    <string name="issues_connecting_billing">Issues connecting to Google Play Billing</string>
    <string name="thanks_support_development">Thanks for helping support development!</string>
    <string name="billing_error_code">billing error code -</string>
    <string name="purchase_history">Purchase history restored.</string>
    <string name="unable_to_start_billing">Unable to initialize Billing Processor.</string>
    <string name="no_purchase_history">Purchases restored - none found with this Google account.</string>
    <string name="billing_not_available">Google Play billing services not available.</string>
    <string name="whats_new">Whats New?</string>
    <string name="unknown_rocket">Unknown Rocket</string>
    <string name="unknown_mission_location">Unknown Mission and Location</string>
    <string name="unknown_orbiter">Unknown Orbiter</string>
    <string name="unknown_agency">Unknown Agency</string>
    <string name="unknown_launch">Unknown Launch</string>
    <string name="description_unavailable">Description unavailable.</string>
    <string name="get_pro_features">Get Pro Features</string>
    <string name="support_development">Support Development</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_description">Get weather information from the launch pad for historical and upcoming launches.</string>
    <string name="calendar_sync">Calendar Sync</string>
    <string name="calendar_sync_description">Automatically sync upcoming launches to your calendar.</string>
    <string name="dynamic_watch_face">Dynamic Watch Face</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="unknown_launch_location">Unknown Launch Location</string>
    <string name="unknown_launch_date">Unknown Launch Date</string>
    <string name="unknown_mission">Unknown Mission</string>
    <string name="unknown_launch_vehicle">Unknown Launch Vehicle</string>
    <string name="no_launches">Uh oh...no launches!</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="launches">Launches</string>
    <string name="vehicles">Vehicles</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_notifications_on">Notifications are on for upcoming launches.</string>
    <string name="enable_notifications_off">Allow Notifications for upcoming launches.</string>
    <string name="status_updates">Status Updates</string>
    <string name="status_updates_on">Receive update notification for launch status changes.</string>
    <string name="status_updates_off">Do not send notifications when a launch status changes.</string>
    <string name="webcast_only">Web-cast Only</string>
    <string name="webcast_only_summary">Only send notifications when a webcast is available.</string>
    <string name="do_not_disturb_enable">Enable Do Not Disturb</string>
    <string name="do_not_disturb_summary">Enable for silent notifications within the do-not-disturb window.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="wear">Wear</string>
    <string name="Support">Become a Supporter</string>
    <string name="about">About</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="ringtone_summary">Select a custom notification ringtone.</string>
    <string name="ringtone">Ringtone</string>
    <string name="priority_summary">Heads-up notification, sound and vibration by default.</string>
    <string name="priority">Priority</string>
    <string name="vibration_summary">Allow vibration for notifications.</string>
    <string name="vibration">Vibration</string>
    <string name="led_summary">Allow LED blink with notification. (Works on some devices)</string>
    <string name="led">LED Blink</string>
    <string name="test_notification_summary">Send a test notification.</string>
    <string name="test_notification">Notification Test</string>
    <string name="notification_interval">Notification Intervals</string>
    <string name="notification_interval_summary">Select intervals to receive launch notifications</string>
    <string name="twenty_four_hour_title">24 Hours</string>
    <string name="twenty_four_hour_on">Receive notification when a Launch is within 24 hours.</string>
    <string name="twenty_four_hour_off">Do not notify for launches within 24 hours.</string>
    <string name="one_hour_title">One Hour</string>
    <string name="one_hour_on">Receive notification when a Launch is within one hour.</string>
    <string name="one_hour_off">Do not notify when a Launch is imminent.</string>
    <string name="ten_minutes_title">Ten Minutes</string>
    <string name="ten_minutes_on">Receive notification when a Launch is within ten minutes.</string>
    <string name="ten_minutes_off">Do not notify when a Launch is within ten minutes.</string>
    <string name="translate_settings">Contribute to translating Space Launch Now!</string>
    <string name="translate">Translate</string>
    <string name="news">News</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
</resources>