<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Notifications">
    <PreferenceCategory android:title="@string/general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:summaryOff="@string/enable_notifications_off"
            android:summaryOn="@string/enable_notifications_on"
            android:title="@string/enable_notifications" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_launch_imminent_updates"
            android:summaryOff="@string/status_updates_off"
            android:summaryOn="@string/status_updates_on"
            android:title="@string/status_updates" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_webcast"
            android:summary="@string/webcast_only_summary"
            android:title="@string/webcast_only" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/do_not_disturb">
        <SwitchPreference
            android:key="do_not_disturb_status"
            android:title="@string/do_not_disturb_enable"
            android:summary="@string/do_not_disturb_summary"
            />
        <me.calebjones.spacelaunchnow.common.customviews.TimePreference
            android:key="do_not_disturb_start_time"
            android:dependency="do_not_disturb_status"
            android:title="@string/start_time"
            android:defaultValue="22:00"
            />
        <me.calebjones.spacelaunchnow.common.customviews.TimePreference
            android:key="do_not_disturb_end_time"
            android:dependency="do_not_disturb_status"
            android:title="@string/end_time"
            android:defaultValue="08:00"
            />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_preferences">
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/ringtone_summary"
            android:title="@string/ringtone" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_heads_up"
            android:summary="@string/priority_summary"
            android:title="@string/priority" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:summary="@string/vibration_summary"
            android:title="@string/vibration" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_led"
            android:summary="@string/led_summary"
            android:title="@string/led" />

        <Preference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_test"
            android:summary="@string/test_notification_summary"
            android:title="@string/test_notification" />
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="notifications_new_message"
        android:title="@string/notification_interval"
        android:summary="@string/notification_interval_summary">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_launch_day"
            android:summaryOff="@string/twenty_four_hour_off"
            android:summaryOn="@string/twenty_four_hour_on"
            android:title="@string/twenty_four_hour_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_launch_imminent"
            android:summaryOff="@string/one_hour_off"
            android:summaryOn="@string/one_hour_on"
            android:title="@string/one_hour_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_launch_minute"
            android:summaryOff="@string/ten_minutes_off"
            android:summaryOn="@string/ten_minutes_on"
            android:title="@string/ten_minutes_title" />
    </PreferenceCategory>
</PreferenceScreen>
