<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.GeneralFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/general"
        android:summary="@string/general_settings"
        android:breadCrumbTitle="@string/general" />
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.NotificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        android:summary="Set up launch notifications and scheduling."
        android:breadCrumbTitle="@string/notifications"/>
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.AppearanceFragment"
        android:icon="@drawable/ic_appearance"
        android:title="@string/appearance"
        android:summary="Customize app theme and colors."
        android:breadCrumbTitle="@string/appearance"/>
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.WearFragment"
        android:icon="@drawable/ic_wear"
        android:title="@string/wear"
        android:summary="Change Android Wear watch face settings."
        android:breadCrumbTitle="@string/wear"/>
    <header
        android:icon="@drawable/ic_about_black"
        android:summary="Application information about license, libraries, changelog, etc"
        android:title="@string/about">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.ui.settings.AboutActivity"
            android:targetPackage="me.calebjones.spacelaunchnow.debug"/>
    </header>
    <header
        android:icon="@drawable/ic_translate"
        android:summary="@string/translate_settings"
        android:title="@string/translate">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://spacelaunchnow.oneskyapp.com/"
            />
    </header>
    <header
        android:icon="@drawable/ic_support_black"
        android:summary="Follow my projects and contribute to future development."
        android:title="@string/Support">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.ui.supporter.SupporterActivity"
            android:targetPackage="me.calebjones.spacelaunchnow.debug"/>
    </header>

</preference-headers>
