<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:title="@string/search" />

    <item android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:title="Filter" />

    <item android:id="@+id/action_date"
        android:icon="@drawable/ic_event"
        app:showAsAction="always"
        android:title="@string/date" />

    <item
        android:id="@+id/action_supporter"
        android:orderInCategory="95"
        android:title="@string/remove_ads"
        android:textColor="?android:textColorPrimary"
        app:showAsAction="never" />

    <item
        android:id="@+id/return_home"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/refresh" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
