<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.GeneralFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="General"
        android:summary="@string/general_settings"
        android:breadCrumbTitle="General" />
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.NotificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications"
        android:summary="@string/notifications_settings"
        android:breadCrumbTitle="Notifications"/>
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.AppearanceFragment"
        android:icon="@drawable/ic_appearance"
        android:title="Appearance"
        android:summary="@string/appearance_settings"
        android:breadCrumbTitle="Appearance"/>
    <header
        android:fragment="me.calebjones.spacelaunchnow.ui.settings.fragments.WearFragment"
        android:icon="@drawable/ic_wear"
        android:title="Wear"
        android:summary="@string/wear_settings"
        android:breadCrumbTitle="Wear"/>
    <header
        android:icon="@drawable/ic_about_black"
        android:summary="@string/about_settings"
        android:title="About">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.ui.settings.AboutActivity"
            android:targetPackage="me.calebjones.spacelaunchnow"/>
    </header>
    <header
        android:icon="@drawable/ic_support_black"
        android:summary="@string/support_settings"
        android:title="Support">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.ui.supporter.SupporterActivity"
            android:targetPackage="me.calebjones.spacelaunchnow"/>
    </header>

</preference-headers>
