<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017    Mathijs Lagerberg, Pixplicity BV
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:padding="12dp"
              android:theme="@style/ThemeOverlay.AppCompat.Dark"
              tools:background="#000000">

    <TextView
        android:id="@+id/tv_swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/swipe_to_dismiss"
        android:textColor="#90ffffff"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="?android:attr/textColorSecondary"
        tools:text="@string/please_rate_short"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_negative"
                style="?android:checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingEnd="@dimen/view_margins"
                android:paddingLeft="@dimen/view_margins"
                android:paddingRight="@dimen/view_margins"
                android:paddingStart="@dimen/view_margins"
                android:text="@string/button_feedback"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone"
                tools:visibility="visible"/>

            <CheckBox
                android:id="@+id/cb_never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:text="@string/button_dont_ask"
                android:textColor="?android:attr/textColorSecondary"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_positive"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="1"
            android:text="@string/button_yes"/>
    </LinearLayout>
</LinearLayout>
