<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lnrLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/TitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="@dimen/material_baseline_grid_2x"
                app:srcCompat="@drawable/ic_unknown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/launch_rocket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:maxLines="2"
                    android:paddingTop="8dp"
                    android:text="@string/unknown_launch_vehicle"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/mission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:singleLine="false"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/unknown_mission" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:paddingRight="16dp"
                    android:singleLine="false"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/unknown_launch_location" />

                <TextView
                    android:id="@+id/launch_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="2"
                    android:paddingBottom="4dp"
                    android:paddingRight="16dp"
                    android:singleLine="false"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/unknown_launch_date" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>